--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -228,10 +228,18 @@ body {
             }
         }
         .privilege-block_body {
+            width: 100%;
             height: 281px;
+            position: relative;
             overflow: hidden;
             border-bottom-right-radius: 30px;
             border-bottom-left-radius: 30px;
+            .pvl_img_tag{
+                position: absolute;
+                width: 66px;
+                height: 66px;
+                z-index: 20;
+            }
             .privilege-block_body_img_ul {
                 max-width: inherit;
                 list-style: none;
@@ -285,6 +293,7 @@ body {
                             position: absolute;
                             overflow: hidden;
                             font-size: 0px;
+                            z-index: 21;
                         }
                         &:hover {
                             // margin-top: -200px;
@@ -293,12 +302,14 @@ body {
                             //opacity: .5;
                             //height: 120px;
                         }
+                        /*
                         #pvl_first_tab_li {
                             border-bottom-left-radius: 18px;
                         }
                         #pvl_last_tab_li {
                             border-bottom-right-radius: 18px;
                         }
+                        */
                         p {
                             position: absolute;
                             color: #FFF;
@@ -308,6 +319,7 @@ body {
                             top: 30%;
                             width: 91%;
                             padding: 0px 15px;
+                            z-index: 22;
                         }
                     }
                 }
@@ -320,7 +332,7 @@ body {
             list-style: none;
             border: none;
             position: absolute;
-            z-index: 15;
+            z-index: 23;
             margin-top: -27px;
             width: 100%;
             .privilege-block_body_info_li_foot2 {
